--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,187 @@
--i https://pypi.org/simple
+absl-py==1.4.0
+aiohttp==3.9.1
+aiosignal==1.3.1
+altair==5.2.0
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.4.0
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.1.0
+autograd==1.5
+autoray==0.6.6
+backcall==0.2.0
+beautifulsoup4==4.12.2
+black==23.11.0
+bleach==6.1.0
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+chex==0.1.83
+cirq-core==1.2.0
+cirq-pasqal==1.2.0
+click==8.1.7
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.7
+distlib==0.3.7
+duet==0.2.9
+exceptiongroup==1.1.3
+executing==1.2.0
+fastjsonschema==2.19.0
+filelock==3.12.4
+flatbuffers==23.5.26
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.12.0
+future==0.18.3
+gast==0.4.0
+google-auth==2.23.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+graphviz==0.20.1
+grpcio==1.58.0
+h5py==3.9.0
+idna==3.4
+ipykernel==6.25.2
+ipython==8.15.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+jax==0.4.19
+jaxlib==0.4.19
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-contrib-core==0.4.2
+jupyter-contrib-nbextensions==0.7.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-nbextensions-configurator==0.6.3
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.9
+jupyterlab_pygments==0.3.0
+keras==2.13.1
+kiwisolver==1.4.5
+libclang==16.0.6
+llvmlite==0.41.1
+lxml==4.9.3
+marimo==0.1.63
+Markdown==3.5.1
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
+mistune==3.0.2
+ml-dtypes==0.3.1
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+nbclient==0.9.0
+nbconvert==7.12.0
+nbformat==5.9.2
+nest-asyncio==1.5.7
+networkx==3.1
+notebook==6.4.3
+numba==0.58.1
+numpy==1.26.1
+oauthlib==3.2.2
+opt-einsum==3.3.0
+optax==0.1.7
+packaging==23.1
+pandas==2.1.0
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.11.2
+pbr==5.11.1
+PennyLane==0.32.0
+PennyLane-Cirq==0.32.0
+PennyLane-Lightning==0.32.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pigar==2.1.1
+Pillow==10.0.0
+pipenv==2023.9.8
+platformdirs==3.10.0
+ply==3.11
+prometheus-client==0.19.0
+prompt-toolkit==3.0.39
+protobuf==4.24.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+Pygments==2.16.1
+pylatexenc==2.10
+pymde==0.1.18
+pymdown-extensions==10.5
+pynndescent==0.5.11
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+qiskit==0.44.1
+qiskit-aer==0.12.2
+qiskit-terra==0.25.1
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.31.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+rise==5.7.1
+rpds-py==0.13.2
+rsa==4.9
+rustworkx==0.13.1
+scikit-learn==1.3.1
+scipy==1.11.2
+semantic-version==2.10.0
+Send2Trash==1.8.2
+six==1.16.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.2
+stevedore==5.1.0
+symengine==0.9.2
+sympy==1.12
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorcircuit==0.11.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+tensornetwork==0.4.6
+termcolor==2.3.0
+terminado==0.18.0
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.3
+toolz==0.12.0
+torch==2.1.1
+torchvision==0.16.1
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.16
+virtualenv==20.24.5
+wcwidth==0.2.6
+webencodings==0.5.1
+Werkzeug==2.3.7
+widgetsnbextension==4.0.9
+wrapt==1.15.0
+yarl==1.9.3
